--- a/docs/Labs/Week01_GettingStartedinSPSS_Lab.Rmd
+++ b/docs/Labs/Week01_GettingStartedinSPSS_Lab.Rmd
@@ -9,20 +9,19 @@ runtime: shiny_prerendered
 ---
 
 ```{r setup, include=FALSE}
+
 library(learnr)
-library(tidyverse)
-library(kableExtra)
-library(knitr)
-#library(shiny)
-library(shinyjs)
-library(bslib)
-library(shinyWidgets)
+pacman::p_load('tidyverse', 'kableExtra', 'knitr')
+
+# library(shiny)
+# library(shinyjs)
+# library(bslib)
+# library(shinyWidgets)
 
 baseColor <- '#4CA384'
 accent1 <- '#9AD079'
 accent2 <- '#C4C6C7'
 accent3 <- '#19424C'
-#tutorial_options(exercise.timelimit = 60)
 ```
 
 ```{r, context = 'server'}
